--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="main.css"></link>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1 class= "text" id="com"> Confortdveri </h1>
+    <button onclick="com()">изменить текст</button>
+    <button onclick="removecom()">сбросить</button>
+    <ul id ="list">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    </ul>
+    <button onclick="addlist()">добавить эллемент</button>
+    <div class= "div1" id = "deldiv">курица</div>
+    <button onclick="addilist()">добавить эллемент</button>
+    <button onclick="dellist()">удалить эллемент</button> 
     <script src="app.js"></script>
+
 </body>
 </html>
