--- a/index.html
+++ b/index.html
@@ -6,20 +6,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="fon">
     <h1 class= "text" id="com"> Confortdveri </h1>
     <button onclick="com()">изменить текст</button>
     <button onclick="removecom()">сбросить</button>
+
     <ul id ="list">
     <li>1</li>
     <li>2</li>
     <li>3</li>
     <li>4</li>
     </ul>
+
     <button onclick="addlist()">добавить эллемент</button>
-    <div class= "div1" id = "deldiv">курица</div>
-    <button onclick="addilist()">добавить эллемент</button>
-    <button onclick="dellist()">удалить эллемент</button> 
+    
+    <div class= "div1" id = "deldiv">
+        курица
+    </div>
+    <button onclick="addilist()">удалить эллемент</button>
+    <div class="">
+        <img class="photo" id = "photo" src="photografi\photo.jpg"/>
+    </div>
+    <div>
+        <button id="photoizmen" onclick="izmenphoto()">Победа!</button>
+        <button id="photonazad" onclick="nazad()">Назад</button>
+    </div>
+    <button class="red" id="cvetknopki" onclick="knopkacvet()">изменить цвет кнопки</button>
+    <h2 id = "bob">Кто проживает на дне океана? </h1>
+        <button class="frog" id="bob" onclick="knopkabob()">ответ</button>
+        <button class="frogdel" id="bobdel" onclick="knopkabobdel()">скрыть</button>
+
+        <div id="test">открыть список</div>
+        <div id="menu">огурцы</div>
+
+        <input type="text">
+        <button>Добавить</button>
+        <div class="txt"></div>
+    
     <script src="app.js"></script>
 
 </body>
